# tacet

./: .gitignore  BORINGSSL_INVESTIGATION_REPORT.md  BOTAN_INVESTIGATION_REPORT.md  CHANGELOG.md  CIRCL_INVESTIGATION_REPORT.md  CRYPTO_JS_INVESTIGATION_REPORT.md  C_LIBRARIES_INTEGRATION.md  C_LIBRARIES_TEST_REPORT.md  Cargo.toml  GO_STDLIB_CRYPTO_ANALYSIS.md  GO_STDLIB_INVESTIGATION_REPORT.md  HISTOGRAM_FEATURE.md  HISTOGRAM_IMPLEMENTATION.md  MBEDTLS_FFI_FIX_REPORT.md  MBEDTLS_FFI_FIX_SUMMARY.md  MBEDTLS_INVESTIGATION_REPORT.md  MBEDTLS_REMAINING_WORK.md  ORION_INVESTIGATION_REPORT.md  WOLFSSL_INVESTIGATION_REPORT.md  X_CRYPTO_INVESTIGATION_REPORT.md  analyze_regression.py  analyze_regression_v2.py  benchmark_report.md  benchmark_results.csv  benchmark_summary.csv  compare_summaries.py  debug_iact.rs  devenv.nix  final_analysis.py  fpr_results_20260205_040349.csv  justfile  librust_out.rlib  test_json_output.rs  test_tail_slow_share
.just/: bench.just  bindings.just  build.just  calibrate.just  doc.just  example.just  paper.just  profile.just  quality.just  test.just
crates/tacet/: Cargo.toml  build.rs
crates/tacet-bench/: Cargo.toml
crates/tacet-bench/src/: adapters.rs  checkpoint.rs  dudect_stats.rs  lib.rs  output.rs  process_pool.rs  realistic.rs  sweep.rs  synthetic.rs
crates/tacet-c/: Cargo.toml  build.rs
crates/tacet-c/include/: tacet.h
crates/tacet-c/src/: lib.rs  types.rs
crates/tacet-c/tests/: CMakeLists.txt  test_known_leaky.c  test_known_safe.c  test_one_shot.c
crates/tacet-core/: Cargo.toml
crates/tacet-core/src/: formatting.rs  histogram.rs  lib.rs  math.rs  result.rs  timer.rs  types.rs
crates/tacet-core/src/adaptive/: calibration.rs  kl_divergence.rs  mod.rs  posterior.rs  quality_gates.rs  state.rs  step.rs
crates/tacet-core/src/analysis/: bayes.rs  effect.rs  gibbs.rs  mde.rs  mod.rs
crates/tacet-core/src/preflight/: sanity.rs
crates/tacet-core/src/statistics/: acquisition.rs  block_length.rs  covariance.rs  iact.rs  mod.rs  quantile.rs  wasserstein.rs
crates/tacet-macros/: Cargo.toml
crates/tacet-napi/: Cargo.toml  package.json
crates/tacet-napi/examples/: simple.ts
crates/tacet-napi/src/: lib.rs  oracle.rs  types.rs
crates/tacet-napi/test/: helpers.ts  integration.test.ts  outcomes.test.ts
crates/tacet-napi/ts/: index.ts  oracle.ts  result.ts
crates/tacet-wasm/: Cargo.toml  package.json
crates/tacet-wasm/src/: oracle.rs  types.rs
crates/tacet-wasm/tests/: crypto-js.test.ts  node-forge.test.ts
crates/tacet-wasm/tests/noble/: README.md  ciphers.test.ts  curves.test.ts  helpers.ts
crates/tacet-wasm/ts/: collector.ts  index.ts  oracle.ts  result.ts  types.ts
crates/tacet/benches/: perf_overhead.rs
crates/tacet/data/calibration/: autocorr_heatmap_autocorr_iteration.csv  autocorr_heatmap_autocorr_quick_adjacent_network.csv  power_curve_power_curve_iteration.csv  power_curve_power_curve_quick_adjacent_network.csv
crates/tacet/examples/: aes.rs  simple.rs
crates/tacet/src/: config.rs  lib.rs  oracle.rs
crates/tacet/src/adaptive/: calibration.rs  loop_runner.rs  single_pass.rs  state.rs
crates/tacet/src/analysis/: diagnostics.rs  mod.rs
crates/tacet/src/helpers/: effect.rs  mod.rs
crates/tacet/src/measurement/: cycle_timer.rs  mod.rs  perf.rs  perf_mmap.rs  priority.rs  timer.rs
crates/tacet/src/output/: json.rs  mod.rs  terminal.rs
crates/tacet/src/power/: analyze.rs  dataset.rs  features.rs  preprocessing.rs  report.rs
crates/tacet/tests/: calibration.rs  crypto.rs  orion_standalone.rs  perf_comparison.rs  perf_mmap.rs  perf_mmap_validation.rs  test_diagnostic_types.rs  test_pmu_init.rs  unit.rs
crates/tacet/tests/calibration/: discrete_mode.rs.bak  discrete_mode.rs.bak2  fpr.rs  iact_methods.rs  power.rs  power_curve.rs  utils.rs
crates/tacet/tests/core/: known_leaky.rs
crates/tacet/tests/crypto/: c_libraries.rs  rust_libraries.rs
crates/tacet/tests/crypto/c_libraries/: BORINGSSL_README.md  README.md  boringssl.rs  botan.rs  libressl.rs  libsodium.rs  mbedtls.rs  wolfssl.rs
crates/tacet/tests/crypto/js_libraries/: node-forge-rsa.mjs  package.json  test-node-forge-rsa.mjs
crates/tacet/tests/crypto/pqcrypto/: dilithium.rs
crates/tacet/tests/crypto/rust_libraries/: orion.rs
crates/tacet/tests/platform/: kperf.rs  perf.rs
crates/tacet/tests/runtime/: async_timing.rs
crates/tacet/tests/synthetic/: dudect_examples.rs  power_analysis.rs
crates/tacet/tests/unit/: reliability.rs  types.rs
docs/: AWS_VALIDATION_RUN.md  USENIX_PAPER_PLAN.md
examples/: histogram_demo.rs
paper/: .devenv.flake.nix  Makefile  README.md  appendix_methodology.tex  appendix_methodology.tex.bak  devenv.nix  paper.aux  paper.bbl  paper.bib  paper.blg  paper.out  paper.tex  paper.tex.backup  paper.tex.bak  refchecker-report-llm.json  refchecker-report-tex.json  refchecker-report.json  usenix.sty
paper/analysis/: analyze_medium_detailed.py  compare_medium_vs_thorough.py  compare_perquantile_vs_w1.py  eda_v73.py  generate_tail_power_curves.py  prototype_autocorr_figs.py  pyproject.toml  rtlf_analysis.md  run_analysis.py  run_analysis_medium.py  silent_analysis.md
paper/analysis/outputs/: robustness_report.txt
paper/analysis/results/medium-w1-distance/: benchmark_summary.csv
paper/analysis/results/medium-w1-v7.1/: benchmark_report.md  benchmark_results.csv  benchmark_summary.csv
paper/analysis/results/thorough-w1-v7.1-all-tools/: benchmark.pid  benchmark_report.md  benchmark_summary.csv
paper/analysis/src/tacet_analysis/: __init__.py  calibration.py  charts.py  data.py  robustness.py  utils.py
results/: autocorr_heatmap_autocorr_validation_adjacent_network.csv  bayesian_calibration_validation_adjacent_network_0.0x.csv  bayesian_calibration_validation_adjacent_network_1.0x.csv  bayesian_calibration_validation_adjacent_network_2.0x.csv  bayesian_calibration_validation_pmu_0.0x.csv  bayesian_calibration_validation_pmu_1.0x.csv  bayesian_calibration_validation_pmu_2.0x.csv  bayesian_calibration_validation_remote_network_0.0x.csv  bayesian_calibration_validation_remote_network_1.0x.csv  (+56 more)
(+107 files in other folders)
