[workspace]
resolver = "2"
members = [
    "crates/tacet",
    "crates/tacet-core",
    "crates/tacet-macros",
    "crates/tacet-c",
    "crates/tacet-napi",
    "crates/tacet-wasm",
    "crates/tacet-bench",
]
exclude = [
    "crates/tacet/target/dudect-benchmarks",
]

# Shared settings for all workspace members
[workspace.package]
edition = "2021"
rust-version = "1.90"
license = "MPL-2.0"
repository = "https://github.com/agucova/tacet"
homepage = "https://tacet.sh"

[profile.release]
debug = true
