[package]
name = "tacet-bench"
version = "0.4.2"
edition = "2021"
description = "Benchmark comparison infrastructure for tacet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agucova/tacet"
homepage = "https://tacet.sh"
readme = "README.md"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
tacet = { path = "../tacet" }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
tempfile = "3.24.0"
serde_json = "1.0.149"
rayon = { version = "1.10", optional = true }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

[dev-dependencies]
