[package]
name = "tacet-core"
version = "0.4.1"
edition = "2021"
rust-version = "1.90"
license = "MPL-2.0"
readme = "README.md"
description = "Core statistical analysis for timing side-channel detection (no_std)"
keywords = ["security", "cryptography", "timing", "side-channel", "no_std"]
categories = ["cryptography", "no-std"]
# TODO: Restore github.com/agucova/tacet after anonymous review
repository = "https://anonymous.4open.science/r/tacet-75EB/"
documentation = "https://docs.rs/tacet-core"
homepage = "https://tacet.sh"

[lib]
name = "tacet_core"

[dependencies]
# Linear algebra - supports no_std with libm
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }

# Random number generation - supports no_std with alloc
rand = { version = "0.9", default-features = false, features = ["alloc"] }
rand_distr = { version = "0.5", default-features = false }
rand_xoshiro = { version = "0.7", default-features = false }

# Serialization - supports no_std with alloc
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Math functions for no_std
libm = "0.2"

# Parallel bootstrap (optional, requires std)
rayon = { version = "1.11", optional = true }
hashbrown = "0.16.1"

# Terminal colors (optional, requires std)
colored = { version = "3.0", optional = true }

[features]
default = ["std"]

# Enable std for convenience (fuller Display impls, etc.)
# When std is enabled, colored output uses the `colored` crate which
# respects NO_COLOR, TERM, and TTY detection automatically.
std = ["nalgebra/std", "rand/std", "serde/std", "dep:colored"]

# Enable parallel bootstrap (requires std)
parallel = ["std", "dep:rayon"]

[dev-dependencies]
proptest = "1.8.0"
