[package]
name = "tacet-macros"
version = "0.4.1"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
description = "Proc macros for tacet timing side-channel detection"
# TODO: Restore github.com/agucova/tacet after anonymous review
repository = "https://anonymous.4open.science/r/tacet-75EB/"
homepage = "https://tacet.sh"
keywords = ["timing", "side-channel", "security", "cryptography", "testing"]
categories = ["development-tools::testing", "cryptography"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
