[package]
name = "tacet-napi"
version = "0.4.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "[DEPRECATED] Node.js/Bun bindings for tacet - use tacet-wasm instead"
keywords = ["security", "cryptography", "timing", "side-channel", "nodejs", "deprecated"]
categories = ["cryptography", "api-bindings"]

[badges]
maintenance = { status = "deprecated" }

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs for Node.js bindings
napi = { version = "2.16", default-features = false, features = [
    "napi8",
    "tokio_rt",
    "serde-json",
] }
napi-derive = "2.16"

# Core analysis (no timing, just statistics)
tacet-core = { path = "../tacet-core", features = ["std", "parallel"] }

# Calibration from main crate
tacet = { path = "../tacet", default-features = false }

# Random number generation
rand = "0.9"
rand_xoshiro = "0.7"

# Error handling
thiserror = "2"

[build-dependencies]
napi-build = "2.1"
