[package]
name = "tacet-wasm"
version = "0.4.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for tacet - timing side-channel detection"
keywords = ["security", "cryptography", "timing", "side-channel", "wasm"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.85"
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng"] }
rand_xoshiro = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
thiserror = "2.0.18"
tsify = { version = "0.5.6", features = ["js"] }
wasm-bindgen = "0.2.108"

# Core analysis (no timing, just statistics)
tacet-core = { path = "../tacet-core", default-features = false, features = ["std"] }

# Getrandom with js/wasm_js features for WASM
# v0.2 for old dependencies, v0.3 for rand 0.9
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
parallel = ["tacet-core/parallel"]
