[package]
name = "tacet"
version = "0.4.1"
edition = "2021"
rust-version = "1.90"
license = "MPL-2.0"
readme = "README.md"
description = "Detect timing side channels in cryptographic code"
keywords = ["security", "cryptography", "timing", "side-channel"]
categories = ["cryptography", "development-tools::testing"]
repository = "https://github.com/agucova/tacet"
documentation = "https://docs.rs/tacet"
homepage = "https://tacet.sh"

[dependencies]
tacet-core = { version = "0.4.1", path = "../tacet-core" }
tacet-macros = { version = "0.4.1", path = "../tacet-macros", optional = true }
colored = "3.0.0"
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rand_xoshiro = "0.7"
statrs = "0.18"
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tracing = "0.1"
indicatif = { version = "0.17", optional = true }
thread-priority = { version = "1.2.0", optional = true }

# Platform-specific cycle counters and affinity support
[target.'cfg(target_os = "macos")'.dependencies]
kperf-rs = { version = "0.1.1", optional = true }
libc = "0.2"  # Required for CPU affinity pinning

[target.'cfg(target_os = "linux")'.dependencies]
perf_event2 = { package = "perf-event2", version = "0.7", optional = true }
perf-event-open-sys = { version = "4.0", optional = true }
memmap2 = { version = "0.9", optional = true }
libc = "0.2"  # Required for CPU affinity pinning

[dev-dependencies]
aes-gcm = "0.10.3"
subtle = "2.6.1"
criterion = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
tokio = { version = "1", features = ["rt", "time", "macros", "rt-multi-thread"] }
# For AES timing tests
aes = "0.8"
cipher = { version = "0.4", features = ["block-padding"] }
# For ECC timing tests
x25519-dalek = "2.0"
curve25519-dalek = "4.1"
# For comparison benchmarks
dudect-bencher = "0.6"
regex = "1.10"
tempfile = "3.8"
# For expanded crypto test suite
sha3 = "0.10"
blake2 = "0.10"
chacha20poly1305 = "0.10"
rsa = "0.9"
ring = "0.17"
# Post-quantum crypto (C bindings via PQClean)
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-falcon = "0.3"
pqcrypto-sphincsplus = "0.7"
sha2 = "0.10.9"
pqcrypto-traits = "0.3.5"
# For macro compile-time error tests
trybuild = "1.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "perf_overhead"
harness = false

[features]
# By default, enable parallel bootstrap, platform-specific cycle counters, macros, and thread priority
default = [
    "parallel",
    "kperf-default",
    "perf-default",
    "macros",
    "thread-priority",
]

# Rayon-based parallel bootstrap (4-8x speedup on multi-core systems)
parallel = ["dep:rayon", "tacet-core/parallel"]

# Platform-specific cycle counters (enabled by default on appropriate platforms)
# These require elevated privileges (sudo or CAP_PERFMON) for cycle-accurate timing
kperf-default = ["kperf"]
perf-default = ["perf"]

# Proc macro API (timing_test! macro)
macros = ["dep:tacet-macros"]

# Progress bars for benchmarks
progress-bars = ["dep:indicatif"]

# Thread priority control for measurement (not available on WASM)
thread-priority = ["dep:thread-priority"]

# Power analysis module for power/EM side-channel detection
power = []

# Internal features - use default features instead
kperf = ["dep:kperf-rs"]  # libc is always available for CPU affinity
perf = ["dep:perf_event2"]

# EXPERIMENTAL: Zero-overhead mmap-based perf_event reads (ARM64 Linux, kernel ≥5.12)
#
# Provides ~7x faster measurements (300ns vs 2μs) but is UNRELIABLE on systems
# with aggressive PMU multiplexing or limited hardware counters. Known issues:
# - Constant RetryExhausted errors on some ARM64 systems (Neoverse-N1)
# - Requires careful single-threaded usage to avoid PMU contention
# - Benchmark workloads should NOT use this feature
#
# Gracefully falls back to syscall-based reads on failure.
# Only enable if you understand PMU multiplexing and have tested on your platform.
perf-mmap = ["perf", "dep:perf-event-open-sys", "dep:memmap2"]
