[project]
name = "tacet-analysis"
version = "0.1.0"
description = "Data analysis and visualization for Tacet USENIX Security 2026 paper"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "seaborn>=0.13",
    "matplotlib>=3.8",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["ipykernel", "jupyterlab", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tacet_analysis"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
